# sqlite-memory-mcp

./: .gitignore  LICENSE  README.md  auto_archive.py  daily_digest.py  db_utils.py  overdue_bump.py  pyproject.toml  recurring_tasks.py  server.py  task-tray.desktop  task_report.py  task_tray.py
docs/plans/: 2026-03-04-task-tray-design.md  2026-03-04-task-tray-plan.md
examples/: basic_usage.md  session_context_hook.py
press-releases/: devto.md  github-release.md  hackernews.md  linkedin.md  reddit-r-claudeai.md  reddit-r-mcp.md  twitter-thread.md  v0.2.0-github-release.md  v0.3.0-github-release.md  v0.4.0-github-release.md
tests/: test_task_db.py
